add: eslint plugin simple import sort

--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
   "scripts": {
     "dev": "tsc -b && vite build --watch",
     "build": "eslint ./src && tsc -b && vite build",
+    "lint": "eslint ./src",
     "lint:fix": "eslint --fix ./src"
   },
   "devDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
@@ -33,8 +32,11 @@
     "eslint-plugin-prettier": "^5.2.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.14.0",
     "prettier": "3.4.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
